--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,30 @@ build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/39a0fa16758ee97f/HELLOWORLD_MT.ipch
 build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/659e7863d6089a2b/HELLOWORLD.ipch
 build/vs2019/.vs/ECS_DOOM/v16/Solution.VC.db
 build/vs2019/ECS_DOOM.sln
+build/vs2019/.vs/ECS_DOOM/v16/Browse.VC.db-shm
+build/vs2019/.vs/ECS_DOOM/v16/Browse.VC.db-wal
+build/vs2019/.vs/ECS_DOOM/v16/Browse.VC.opendb
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/1ba75b2fab11343/PHYSICSYSTEM.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/3eb2291487740983/SHADER.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/439863a380a98ffe/TIME.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/51fa819c3af07132/MAIN.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/68680e63759c6b45/MATHS.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/8d264b7c4190170c/COMPONENTMANAGER.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/9f1b98577e05c11e/PHYSICSYSTEM.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/a30f61a658c46a33/WINDOW.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/b08fb69d13e019f4/COORDINATOR.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/c0424372b0792756/RENDERSYSTEM.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/c5797dc8e3b0728b/RENDERSYSTEM.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/cc7200a513f93130/MAT44.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/cf0f6a9c9d41178a/SYSTEMMANAGER.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/e7c592294654e523/TIME.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/fa076ce7ffaf2a7b/SYSTEM.ipch
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/fcc3ec4dd4a7835e/SHADER.ipch
+build/vs2019/.vs/ECS_DOOM/v16/Solution.VC.db-shm
+build/vs2019/.vs/ECS_DOOM/v16/Solution.VC.db-wal
+build/vs2019/bin/x86/Debug/Engine.exe
+build/vs2019/bin/x86/Debug/Engine.pdb
+build/vs2019/Engine.vcxproj.filters
+build/vs2019/obj/x86/Debug/Engine/Engine.ilk
+build/vs2019/obj/x86/Debug/Engine/Engine.log
+build/vs2019/obj/x86/Debug/Engine/vc142.pdb
