--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,4 @@ build/vs2019/Engine.vcxproj.filters
 build/vs2019/obj/x86/Debug/Engine/Engine.ilk
 build/vs2019/obj/x86/Debug/Engine/Engine.log
 build/vs2019/obj/x86/Debug/Engine/vc142.pdb
+build/vs2019/.vs/ECS_DOOM/v16/ipch/AutoPCH/51fa819c3af07132/MAIN.ipch
